added 3 fields